--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -530,18 +530,18 @@ obtained by traditional Bayesian updating of elements of the prior credal set.
 Walley's lower envelope theorem also establishes a close connection to robust Bayesian approaches and Bayesian sensitivity analysis
 \parencite[see, e.g.,][]{1994:berger, 2000:rios, 2005:ruggeri} based on sets of distributions.
 In fact, Walley's theory of lower previsions can be seen as
-providing a formal framework for these approaches.
+providing a formal framework for these approaches \parencite[see, e.g.,][\S 1.1]{1994:berger}.
 However, there is a basic difference in the interpretation of the underlying sets of probability distributions.
 While in the imprecise probability context a credal set is understood as an entity of its own,
 the robust Bayesian approach emphasizes the single elements in the set,
 and very often discusses the effects of deviations from a certain central element.%
-\footnote{These so-called \emph{neighbourhood models} are briefly discussed in Section~\ref{sec:alternatives}****.}
+\footnote{These so-called \emph{neighbourhood models} are briefly discussed in Section~\ref{sec:alternatives:neighbourhood}****.}
 
 As a consequence, for the robust Bayesian point of view it is quite natural and common
 to impose some further regularity conditions on the elements in the set of distributions,
 like additional smoothness constraints or unimodality of the underlying densities.%
-\footnote{In Section~\ref{sec:generalmodel}, in the case of $\mathcal{M}$ being a set of parametric distributions,
-we will follow a similar route, however.}
+\footnote{However, in Section~\ref{sec:generalmodel}, in the case of $\MZ$ consisting of parametric distributions only,
+we will follow a similar route, as the canonical conjugates typically are unimodal and smooth.}
 Since lower and upper posterior probabilities are determined by the extreme points of the underlying credal sets,
 this distinction may indeed matter substantially in practice.
 
