--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -354,9 +354,10 @@ whether one considers the categorization $\{$red, other$\}$ or $\{$red, blue, ot
 The usefulness of the RIP has been controversially discussed \parencite[see, e.g., the discussion to][]{1996:walley::idm},
 and alternative imprecise probability models that do not rely on it have been developed.%
 \footnote{See, e.g., Coolen and Augustin \parencite*{2005:Coolen:Augustin, 2009:Coolen:Augustin}
-for an alternative based on the NPI approach (see footnote~\ref{foot:npi}, page~\pageref{foot:npi}).
+for an alternative based on the NPI approach (see Section~\ref{sec:frequentist}). %footnote~\ref{foot:npi}, page~\pageref{foot:npi}).
 Important differences between this model and the IDM are also briefly discussed at the end of \textcite[\S 6.1]{itip-statinf}.
-****note on \textcite{2009:bickis} (see Section~\ref{sec:alternatives:conjugate}) and \textcite{2013:mangilibenavoli}?****}
+Other alternatives to the IDM are discussed by \textcite[see Section~\ref{sec:alternatives:conjugate}]{2009:bickis},
+and by \textcite{2013:mangilibenavoli}.}
 
 %The IDM can be shown to lead to $\infty$-monotone lower probabilities \parencite[see, e.g.,][\S 5]{itip-special},
 %and its credal set is already completely determined by the lower and upper probabilities of the singletons,
